[package]
name = "day12"
version = "0.1.0"
authors = ["Matthew Vernacchia <mvernacc@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day12"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.0"
features = ["extension-module"]
